fix: ensure post title aligns instead of wrapping under the date

--- a/static/styles.css
+++ b/static/styles.css
@@ -480,6 +480,10 @@ blockquote p {
     margin: 0;
 }
 
+.post {
+  display: flex;
+}
+
 .post time {
     margin-right: 0.5rem;
 }
